hphp/hack/test/typecheck/array/disallow_darray_where_vector_like_array_is_required.php.exp
File "disallow_darray_where_vector_like_array_is_required.php", line 4, characters 10-29:
Invalid return type (Typing[4110])
  File "disallow_darray_where_vector_like_array_is_required.php", line 3, characters 18-31:
  Expected `vec<string>`
  File "disallow_darray_where_vector_like_array_is_required.php", line 4, characters 10-29:
  But got `dict<string, int>`
